Fix scrollbars when F12

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -16,7 +16,6 @@ header {
   height: auto;
   z-index: 3;
 }
-
 .header-container {
   text-align: right;
   padding: 16px 20px 16px 20px;
@@ -27,6 +26,7 @@ header {
 
 .hero {
   position: relative;
+  overflow: hidden;
 }
   .hero h1 {
     font-size: 36px;
@@ -52,11 +52,6 @@ header {
     width: 100%;
   }
 
-.icon {
-  width: 25px;
-  height: 25px;
-}
-
 .social-icons {
   margin-top: 0px;
   margin-bottom: 10px;
@@ -66,6 +61,10 @@ header {
   padding: 0;
   display: flex;
   justify-content: center;  
+}
+.icon {
+  width: 25px;
+  height: 25px;
 }
 .social-icon {
   text-decoration: none;
@@ -92,20 +91,3 @@ header {
     background-color: #fff;
     color: #e74c3c;
   }
-
-.game-nav {
-  position: absolute;
-  left: 50%;
-  bottom: 5%;
-  transform: translateX(-50%);
-  z-index: 3;
-}
-.btn-pause {  
-  display: inline-block;
-  color: #fff;
-  padding: 10px;
-  opacity: .4; 
-  text-decoration: none;
-  letter-spacing: 1px;
-  cursor: pointer;
-}
